src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/CD4AC3010.cd
package de.cd4analysis.cocos;

classdiagram CD4AC3010 {

	enum A;
	enum B {
		;
	}
	enum C {
		ENTRY, ENTRY2;
	}
}